# oaibox-gNB

./: .gitmodules  CMakeLists.txt
cmake_targets/autotests/: test_case_list.xml
common/: platform_constants.h
common/utils/nr/: nr_common.c  nr_common.h
common/utils/ocp_itti/: intertask_interface.cpp
executables/: nr-gnb.c  nr-ru.c  nr-softmodem.h  nr-ue.c  nr-uesoftmodem.h  oaibox_data_export.c  oaibox_data_export.h  softmodem-common.h
openair1/PHY/: defs_gNB.h
openair1/PHY/CODING/: nrLDPC_load.c  nr_rate_matching.c
openair1/PHY/INIT/: nr_init.c
openair1/SCHED_NR/: fapi_nr_l1.c  phy_procedures_nr_gNB.c
openair1/SCHED_NR_UE/: fapi_nr_ue_l1.c  phy_procedures_nr_ue.c
openair2/COMMON/: f1ap_messages_types.h
openair2/E1AP/: e1ap.c  e1ap_api.c
openair2/F1AP/: f1ap_cu_ue_context_management.c  f1ap_du_task.c  f1ap_du_ue_context_management.c
openair2/GNB_APP/: MACRLC_nr_paramdef.h  gnb_config.c
openair2/NR_PHY_INTERFACE/: NR_IF_Module.c  NR_IF_Module.h  nr_sched_response.c
openair3/NGAP/: ngap_gNB_handlers.c
openair3/ocp-gtpu/: gtp_itf.cpp  gtp_itf.h
radio/COMMON/: common_lib.h
radio/USRP/: CMakeLists.txt  logging.conf  usrp_fbs.cpp  usrp_fbs.hpp  usrp_lib.cpp
radio/USRP/USERSPACE/LIB/: usrp_lib.cpp
radio/USRP/config/: CustomBatchBeams_Beam1.csv  CustomBatchBeams_D2252E057-28.csv  device.conf
radio/USRP/files/: AAKIT_TMYTEK_28LITE_4x4_2250-28AK344A-010.csv  AAKIT_TMYTEK_28LITE_4x4_C2224L008-28.csv  AAKIT_TMYTEK_28ONE_4x4_2244-O28AK41B-010.csv  AAKIT_TMYTEK_28ONE_4x4_C2210E007-28.csv
radio/USRP/lib/: TMYBeamConfig.py  TMYConfig.py
(+87 files in other folders)
